Add APK store links to game offers
