# lib/db/src/schema/games.ts
@@ -9,6 +9,9 @@ export const gamesTable = pgTable("games", {
   genre: text("genre").notNull(),
   thumbnailUrl: text("thumbnail_url").notNull(),
   gameUrl: text("game_url").notNull(),
+  androidStoreUrl: text("android_store_url"),
+  iosStoreUrl: text("ios_store_url"),
+  packageName: text("package_name"),
   creatorName: text("creator_name").notNull(),
   playCount: integer("play_count").notNull().default(0),
   rating: real("rating").notNull().default(4.0),
